Fixed bug where a vertical scrollbar would appear

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -11,7 +11,7 @@
 
 .App {
     min-height: 100vh;
-    width: 100vw;
+    width: 100%;
     text-align: center;
     font-family: 'Martel', sans-serif;
     overflow-x: hidden;
